--- a/include/main.css
+++ b/include/main.css
@@ -7,11 +7,11 @@ body,th,td {
 	padding: 0px;
 	margin: 0px
 }
-
+/*
 div {
 	padding: 3px
 }
-
+*/
 .inv {
 	background-color: #006699;
 	color: #FFFFFF
