--- a/include/calendar.css
+++ b/include/calendar.css
@@ -45,7 +45,7 @@ a:hover {
   width: 22px;
   height: 22px;
 }
-.day, .day_today, .day_selected{
+.day, .day_today, .day_selected, .day_other{
   float:left;
   width: 18px;
   height: 18px;
@@ -63,6 +63,10 @@ a:hover {
 .day_selected {
   border: 1px solid #00FF00;
   font-weight: bold;
+}
+.day_other {
+  border: 1px solid #EEEEEE;
+/*  font-weight: bold;*/
 }
 .r {
 	border: 0 none;
